# llama-stack

./: .coveragerc  .gitattributes  .gitignore  .impeccable.md  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_INDEX.md  ARCHITECTURE_INSIGHTS.md  ARCHITECTURE_SUMMARY.md  AWS_SETUP_GUIDE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GOVERNANCE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  MANIFEST.in  MYPY_REMEDIATION_PLAN.md  QUICK_REFERENCE.md  README.md  RELEASE_PROCESS.md  SECURITY.md  compose.yaml  example.py  pyproject.toml  twitter_template.txt  verify_milvus_fix.py
.github/: mergify.yml
containers/: Containerfile
docker/: Dockerfile
docs/: NOTION_API_UPGRADE_ANALYSIS.md  README.md  UI_BUG_FIXES.md  docusaurus.config.ts  getting_started.ipynb  getting_started_llama4.ipynb  getting_started_llama_api.ipynb  getting_started_ogx_api.ipynb  getting_started_v0_3_0.ipynb  gpu-runners.md  original_rfc.md  package-lock.json  package.json  quick_start.ipynb  sidebars.ts
examples/: agent.py  demo_script.py  inference.py  rag_agent.py
journal/: 2026-02-18.md  manifest.md
llama-stack-spec/: README.md  pyproject.toml
llama_stack/: log.py  schema_utils.py
llama_stack/providers/inline/post_training/torchtune/: post_training.py  pyproject.toml
llama_stack/providers/inline/post_training/torchtune/common/: utils.py
llama_stack/providers/inline/post_training/torchtune/recipes/: lora_finetuning_single_device.py
llama_stack/providers/remote/files/s3/: config.py  files.py  pyproject.toml
llama_stack/providers/remote/inference/azure/: azure.py  config.py  pyproject.toml
practice/: coin_change_practice.py  hangman_guesser.py  rotate_image_practice.py
scripts/: README.md  anthropic_coverage.py  api-conformance.sh  benchmark_guardrail_batching.py  check-api-conformance.sh  check-init-py.sh  check_file_size.py  cleanup_recordings.py  distro_codegen.py  distro_generate_config.sh  docker.sh  fastapi_generator.py  fips-check.py  generate-config-labels.sh  generate_anthropic_coverage_docs.py  generate_ci_matrix.py  generate_openai_coverage_docs.py  (+25 more)
(+2694 files in other folders)
